--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT = 8000
 NODE_ENV = 'development'
+DB_CONNECTION_SECRET = 'mongodb+srv://girishbhargava:BquG0D857Y1Eg80K@backenddecoded.2un9g.mongodb.net/'
